fixed menu bar overlap issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,9 +14,9 @@ body{
     }
     .ats-background-menu{
         background-color: white;
-        height: 75px;
+        height: 80px;
         width: 85px;
-        /* position: relative; */
+        position: absolute;
         border-radius: 100%;
         transform: scale(0);
         margin: 0;
@@ -97,7 +97,19 @@ body{
 
 
 
-
+    .ats-header-container{
+        position:fixed;
+    }            
+    .ats-header{
+        color:black;
+        position: relative;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        margin-top: 15px;
+        transition: .5s ease-in-out;
+        opacity: 1;
+    }
     .ats-body{
         background-image: url("img/desktop.jpeg");
         height: 100%; 
@@ -105,15 +117,7 @@ body{
         background-position: center;
         background-size: cover;
         transition: .50s ease-in-out;
-        .ats-header-container{
-            position:fixed;
-        }            
-        .ats-header{
-            color:black;
-            position: relative;
-            transition: .5s ease-in-out;
-            opacity: 1;
-        }
+        
         .ats-introduction{
             width: 50%;
             color: white;
@@ -154,7 +158,7 @@ body{
         display:none;
     }
     .ats-invisible{
-        opacity:0;
+        opacity:0 !important;
     }
     .ats-show span{
         display:block;
@@ -167,6 +171,8 @@ body{
         margin: 0;
         border: 0;
         opacity: 1;
+        z-index: 2;
+        min-width: 320px;
     }
     .ats-cheese-show{
         transform: scale(30);
